test/bad/generics/call03.px

func f<T>(x: T, y: T) def
    return

func g<A,B>(x: A, y: B) def
    f(x, y)

g('x', false)
